# textX-tutorial

./: .gitignore  README.rst  main.py  pyproject.toml  shapes.turtle  triangle_and_square.turtle  turtle.dot  turtle.tx
tests/: test_textx_tutorial.py
