[tool.poetry]
name = "textX-tutorial"
version = "0.1.0"
description = ""
authors = ["Ryan Sobol <hello@ryansobol.com>"]

[tool.poetry.dependencies]
python = "^3.7"
textx = "^2.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
